# subwasm

cli/: Cargo.toml
lib/: Cargo.toml
libs/substrate-runtime-proposal-hash/: Cargo.toml
libs/wasm-loader/: Cargo.toml
libs/wasm-testbed/: Cargo.toml
