[package]
name = "substrate-runtime-proposal-hash"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage = "https://github.com/kkast/subwasm"
keywords = [
	"wasm",
	"cli",
	"substrate",
	"blockchain",
	"runtime",
	"polkadot",
	"kusama",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kkast/subwasm"

[dependencies]
hex = "0.4"
blake2 = "0.10"
thiserror = "1.0"
codec = { version = "3.1", package = "parity-scale-codec" }
sp-core = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-wasm-interface = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
frame-metadata = { rev="d6e6c2bf820bd2067aadd7420f361cacaddbb09e", git = "https://github.com/paritytech/frame-metadata",  features = [
	"v12",
	"v13",
	"v14",
	"std",
] }
