[package]
name = "wasm-testbed"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage = "https://github.com/chevdor/subwasm"
keywords = [
	"wasm",
	"cli",
	"substrate",
	"blockchain",
	"runtime",
	"polkadot",
	"kusama",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"

[dependencies]
hex = "0.4"
log = "0.4"
thiserror = "1.0"
wasm-loader = { version = "0.20.0", path = "../wasm-loader" }
substrate-runtime-proposal-hash = { version = "0.20.0", path = "../substrate-runtime-proposal-hash" }
sc-executor = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sc-executor-common = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
scale = { version = "3", package = "parity-scale-codec", default-features = false }
sp-core = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-state-machine = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-wasm-interface = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-version = { branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
scale-info = { version = "2.1", default-features = false, features = [
	"derive",
] }
frame-metadata = { version = "15", package = "frame-metadata", features = [
	"v12",
	"v13",
	"v14",
	"std",
] }
